--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ add_subdirectory(src)
 set (ENV{CMAKE_BUILD_PARALLEL_LEVEL} 8)
 # set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/install")
 target_compile_features(atomix PRIVATE cxx_std_23)
-target_compile_options(atomix PRIVATE -std=c++23 -ltbb -Wall -Wextra)
+target_compile_options(atomix PRIVATE -std=c++23 -Wall -Wextra -pedantic)
