--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    "cmake.sourceDirectory": "/home/braer/dev/atomix",
-    "cmake.buildDirectory": "/home/braer/dev/atomix/build",
+    "cmake.sourceDirectory": "C:/dev/atomix",
+    "cmake.buildDirectory": "C:/dev/atomix/build",
     "cmake.installPrefix": "${workspaceRoot}/build/install",
     "cmake.configureSettings": {
         "CMAKE_BUILD_TYPE": "${buildType}",
@@ -74,5 +74,5 @@
         "iomanip": "cpp",
         "*.wave": "zsh"
     },
-    "C_Cpp.default.compilerPath": "/usr/bin/clang++"
+    "C_Cpp.default.compilerPath": "cl.exe"
 }
