--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,10 @@ cmake_minimum_required(VERSION 3.10.0...3.30.0)
 project(atomix VERSION 0.1.0 LANGUAGES CXX)
 add_subdirectory(src)
 set (ENV{CMAKE_BUILD_PARALLEL_LEVEL} 8)
-target_compile_features(atomix PRIVATE cxx_std_23)
-target_compile_options(atomix PRIVATE -std=c++23 -Wall -Wextra -pedantic)
+if (WIN32)
+    target_compile_features(atomix PRIVATE cxx_std_23)
+    target_compile_options(atomix PRIVATE /W4 /wd4267)
+else()
+    target_compile_features(atomix PRIVATE cxx_std_23)
+    target_compile_options(atomix PRIVATE -std=c++23 -Wall -Wextra -pedantic)
+endif()
