[Checkpoint] Homogenized build & packaging through vcpkg on all platforms

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,45 +2,51 @@ set(CMAKE_AUTOMOC ON)
 message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
 
 if(UNIX AND NOT APPLE)
+    set(VCPKG_HOST_TRIPLET "x64-linux")
+    set(VCPKG_TARGET_TRIPLET "x64-linux")
+
     set(Qt6_DIR "/home/braer/Qt/6.8.0/gcc_64")
     set(oneDPL_DIR "/opt/intel/oneapi/2025.0/lib/cmake/oneDPL")
-    set(VULKAN_SDK "/home/braer/VulkanSDK/1.3.296.0")
 elseif(APPLE)
+    set(VCPKG_HOST_TRIPLET "x64-macos")
+    set(VCPKG_TARGET_TRIPLET "x64-macos")
+
     set(Qt6_DIR "/usr/local/Qt-6.8.0")
     set(oneDPL_DIR "/opt/intel/oneapi/2022.2.0/lib/cmake/oneDPL")
-    set(Qt6GuiTools_DIR ${Qt6_DIR}/lib/cmake/Qt6GuiTools)
-    set(VULKAN_SDK "/Users/braer/VulkanSDK/1.3.296.0/macOS")
-    set(DYLD_LIBRARY_PATH ${VULKAN_SDK}/lib ${DYLD_LIBRARY_PATH})
+    # set(Qt6GuiTools_DIR ${Qt6_DIR}/lib/cmake/Qt6GuiTools)
 
+    set(DYLD_LIBRARY_PATH ${VULKAN_SDK}/lib ${DYLD_LIBRARY_PATH})
     set(VK_ADD_LAYER_PATH ${VULKAN_SDK}/share/vulkan/explicit_layer.d)
     set(VK_ICD_FILENAMES ${VULKAN_SDK}/share/vulkan/icd.d/MoltenVK_icd.json)
     set(VK_DRIVER_FILES ${VULKAN_SDK}/share/vulkan/icd.d/MoltenVK_icd.json)
 elseif(WIN32)
+    set(VCPKG_HOST_TRIPLET "x64-windows")
+    set(VCPKG_TARGET_TRIPLET "x64-windows")
+
     set(Qt6_DIR "C:/Qt/6.8.1/msvc2022_64")
-    # set(Vulkan_DIR "C:/dev/vcpkg/installed/x64-windows/share/Vulkan")
-    set(glslang_DIR "C:/dev/vcpkg/installed/x64-windows/share/glslang")
-    list(APPEND CMAKE_PREFIX_PATH "C:/dev/vcpkg/installed/x64-windows/share")
 endif()
 
-set(ENV{Qt6_DIR} ${Qt6_DIR})
+list(APPEND CMAKE_PREFIX_PATH $ENV{VCPKG_ROOT}/installed/${VCPKG_TARGET_TRIPLET}/share)
+list(APPEND CMAKE_PREFIX_PATH ${Qt6_DIR})
+
 set(ENV{VSCODE_QT_SDK} ${Qt6_DIR})
 set(ENV{VSCODE_QT_FOLDER} ${Qt6_DIR})
-set(ENV{VULKAN_SDK} ${VULKAN_SDK})
 set(ENV{VK_LOADER_DEBUG} "error,warn,layer,info")
 
 find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui Concurrent Qml)
 find_package(oneDPL REQUIRED)
-find_package(TBB REQUIRED COMPONENTS tbb tbbmalloc)
-find_package(glslang CONFIG REQUIRED COMPONENTS SPIRV glslang glslang-default-resource-limits)
+find_package(TBB CONFIG REQUIRED)
+find_package(glm CONFIG REQUIRED)
+find_package(glslang CONFIG REQUIRED)
 find_package(SPIRV-Tools CONFIG REQUIRED)
-find_package(SPIRV-Tools-opt CONFIG REQUIRED)
 find_package(spirv_cross_core CONFIG REQUIRED)
 find_package(spirv_cross_reflect CONFIG REQUIRED)
 find_package(Vulkan REQUIRED)
 
 qt_add_executable(atomix main.cpp quaternion.cpp special.cpp shaderobj.cpp mainwindow.cpp filehandler.cpp manager.cpp wavemanager.cpp cloudmanager.cpp slideswitch.cpp programVK.cpp vkwindow.cpp)
 
-target_link_libraries(atomix PRIVATE Qt6::Core Qt6::Widgets Qt6::Gui Qt6::Concurrent Qt6::Qml glslang::glslang glslang::glslang-default-resource-limits glslang::SPIRV SPIRV-Tools-opt spirv-cross-core spirv-cross-reflect oneDPL TBB::tbb TBB::tbbmalloc Vulkan::Vulkan)
+target_link_libraries(atomix PRIVATE glm::glm glslang::glslang glslang::glslang-default-resource-limits glslang::SPIRV SPIRV-Tools-static SPIRV-Tools-opt spirv-cross-core spirv-cross-reflect oneDPL TBB::tbb TBB::tbbmalloc Vulkan::Vulkan)
+target_link_libraries(atomix PRIVATE Qt6::Core Qt6::Widgets Qt6::Gui Qt6::Concurrent Qt6::Qml)
 
 # Release Build and Install
 if(CMAKE_BUILD_TYPE STREQUAL "Release")
