--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    "cmake.sourceDirectory": "/Users/braer/dev/atomix",
-    "cmake.buildDirectory": "/Users/braer/dev/atomix/build",
+    "cmake.sourceDirectory": "C:/dev/atomix",
+    "cmake.buildDirectory": "C:/dev/atomix/build",
     "cmake.installPrefix": "${workspaceRoot}/build/install",
     "cmake.configureSettings": {
         "CMAKE_BUILD_TYPE": "${buildType}",
