[Checkpoint] Finally fixed osx app bundle Vulkan loader issue -- non-dev macbook runs atomix! Added debug-install preset for debugging non-dev machines.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(CMAKE_AUTOMOC ON)
-message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
+message(STATUS "<------- CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE} ------>")
 
 if(UNIX AND NOT APPLE)
     set(Qt6_DIR "/home/braer/Qt/6.8.0/gcc_64")
@@ -38,52 +38,50 @@ qt_add_executable(atomix main.cpp quaternion.cpp special.cpp shaderobj.cpp mainw
 target_link_libraries(atomix PRIVATE glm::glm glslang::glslang glslang::glslang-default-resource-limits glslang::SPIRV SPIRV-Tools-static SPIRV-Tools-opt spirv-cross-core spirv-cross-reflect oneDPL TBB::tbb TBB::tbbmalloc Vulkan::Vulkan)
 target_link_libraries(atomix PRIVATE Qt6::Core Qt6::Widgets Qt6::Gui Qt6::Concurrent Qt6::Qml)
 
-# Release Build and Install
-if(CMAKE_BUILD_TYPE STREQUAL "Release")
-    set(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/build/install)
-    
-    if(APPLE)
-        message(STATUS "Build/Install for Apple")
-        set_target_properties(atomix PROPERTIES
-            MACOSX_BUNDLE true
-            BUILD_RPATH "$ORIGIN/../Frameworks"
-            INSTALL_RPATH "@loader_path/../Frameworks"
-        )
-        # Run custom install script invoking macdeployqt and copying/editing files
-        add_custom_command(TARGET atomix POST_BUILD
-            WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/build
-            COMMAND cp ${CMAKE_SOURCE_DIR}/doc/deploy/macdeploy.sh deploy.sh
-            COMMAND chmod +x deploy.sh
-        )
-    elseif(UNIX)
-        message(STATUS "Build/Install for Linux")
-        # Run custom install script invoking appimagetool and copying/editing files
-        add_custom_command(TARGET atomix POST_BUILD
-            WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/build
-            COMMAND cp ${CMAKE_SOURCE_DIR}/doc/deploy/nixdeploy.sh deploy.sh
-            COMMAND chmod +x deploy.sh
-        )
-    elseif(WIN32)
-        message(STATUS "Build/Install for Windows")
-        set_property(TARGET atomix PROPERTY WIN32_EXECUTABLE true)
-    endif()
+# Configure Install subroutines
+set(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/build/install)
 
-    install(TARGETS atomix
-        BUNDLE DESTINATION .
-        RUNTIME DESTINATION .
+if(APPLE)
+    message(STATUS "Build/Install for Apple")
+    # Run custom install script invoking macdeployqt and copying/editing files
+    set_target_properties(atomix PROPERTIES
+        MACOSX_BUNDLE true
+        BUILD_RPATH "@loader_path/../lib"
+        INSTALL_RPATH "@loader_path/../lib"
     )
+    add_custom_command(TARGET atomix POST_BUILD
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/build
+        COMMAND cp ${CMAKE_SOURCE_DIR}/doc/deploy/macdeploy.sh deploy.sh
+        COMMAND chmod +x deploy.sh
+    )
+elseif(UNIX)
+    message(STATUS "Build/Install for Linux")
+    # Run custom install script invoking appimagetool and copying/editing files
+    add_custom_command(TARGET atomix POST_BUILD
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/build
+        COMMAND cp ${CMAKE_SOURCE_DIR}/doc/deploy/nixdeploy.sh deploy.sh
+        COMMAND chmod +x deploy.sh
+    )
+elseif(WIN32)
+    message(STATUS "Build/Install for Windows")
+    set_property(TARGET atomix PROPERTY WIN32_EXECUTABLE true)
+endif()
 
-    qt_generate_deploy_app_script(
-        TARGET atomix
-        OUTPUT_SCRIPT deploy_script
-        NO_UNSUPPORTED_PLATFORM_ERROR
-    )
-    
-    if(WIN32)
-        install(SCRIPT ${deploy_script})
-    else()
-        install(CODE "execute_process(COMMAND ./deploy.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/build)")
-    endif()
+install(TARGETS atomix
+    BUNDLE DESTINATION .
+    RUNTIME DESTINATION .
+)
+
+qt_generate_deploy_app_script(
+    TARGET atomix
+    OUTPUT_SCRIPT deploy_script
+    NO_UNSUPPORTED_PLATFORM_ERROR
+)
+
+if(WIN32)
+    install(SCRIPT ${deploy_script})
+else()
+    install(CODE "execute_process(COMMAND ./deploy.sh ${CMAKE_BUILD_TYPE} WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/build)")
 endif()
 
 
