[Checkpoint] Fixed Linux appImage Vulkan loader issue. All Linux builds stable.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,11 @@
 set(CMAKE_AUTOMOC ON)
 message(STATUS "<------- CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE} ------>")
 
-if(UNIX AND NOT APPLE)
+if(APPLE)
+    set(Qt6_DIR "/usr/local/Qt-6.8.0")
+elseif(UNIX)
     set(Qt6_DIR "/home/braer/Qt/6.8.0/gcc_64")
     set(oneDPL_DIR "/opt/intel/oneapi/2025.0/lib/cmake/oneDPL")
-elseif(APPLE)
-    set(Qt6_DIR "/usr/local/Qt-6.8.0")
-    set(oneDPL_DIR "/opt/intel/oneapi/2022.2.0/lib/cmake/oneDPL")
 elseif(WIN32)
     set(Qt6_DIR "C:/Qt/6.8.1/msvc2022_64")
 endif()
